# Firefly-Kernel

./: .clang-format  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Firefly-Kernel.code-workspace  Firefly0-Kernel.code-workspace  Makefile  Makefile.conf  README.md  Screenshots.md  bruh  build.py  compileandstart.sh  fireflyos.asm  fireflyos_new.asm  flags.mk  image_create.sh  limine.cfg  linker.ld  main.cpp  makefile  meson.build  meson.build.orig  meson_config.txt  meson_options.txt  parsed_i386.sym  parsed_x86_64.sym  start.sh  temp.hpp  test
.devcontainer/: Dockerfile  devcontainer.json
.devcontainers/: Dockerfile  devcontainer.json
.github/workflows/: c-cpp.yml  codeql.yml
Scripts/: geniso.sh  gensym.sh  install_API.sh  parsed_i386.sym  parsed_x86_64.sym  qemu-log.sh  qemu-uefi.sh  symbol_table_i386.py  symbol_table_x86_64.py
arch/i386/: CMakeLists.txt
arch/i386/kernel/: boot.asm  kernel.cpp  multiboot2.asm  utils.cpp
arch/i386/kernel/drivers/: serial.cpp  vbe.cpp  vga.cpp
arch/i386/kernel/gdt/: gdt.asm  gdt.cpp
arch/i386/kernel/init/: init.cpp  mb2_proto.cpp
arch/i386/kernel/int/: interrupt.asm  interrupt.cpp  pic.cpp
arch/i386/kernel/memory-manager/: bootstrap-buddy.cpp
arch/i386/kernel/pmm/: buddy.cpp
arch/i386/kernel/trace/: strace.cpp  symbols.cpp
arch/i386/libk++/: iostream.cpp
arch/x86_64/: meson.build
arch/x86_64/applications/: application_manager.cpp  application_pointers.cpp
arch/x86_64/applications/cat/: main.cpp
arch/x86_64/applications/func_pointers/: main.cpp
arch/x86_64/applications/help/: main.cpp
arch/x86_64/applications/ls/: main.cpp
arch/x86_64/applications/regs/: main.cpp
arch/x86_64/applications/settings/: main.cpp
arch/x86_64/applications/shell/: etc.cpp  main.cpp
arch/x86_64/applications/test/: main.cpp
arch/x86_64/kernel/: boot.asm  checksum.cpp  kernel.cpp  multiboot2.asm  random.cpp  settings.cpp  sleep.cpp  utils.cpp
arch/x86_64/kernel/api/: api.c  api.cpp  api.h
arch/x86_64/kernel/brainfuck/: bf.cpp
arch/x86_64/kernel/drivers/: ps2.cpp  ps2mouse.cpp  serial.cpp  serial_legacy.cpp  vbe.cpp  vga.cpp
arch/x86_64/kernel/drivers/pci/: ide.cpp
arch/x86_64/kernel/fb/: double-buffering.cpp  framebuffer.cpp  stivale2-term.cpp
arch/x86_64/kernel/fs/custom/: main.cpp
arch/x86_64/kernel/gdt/: gdt.asm  gdt.cpp  tss.cpp
arch/x86_64/kernel/init/: init.cpp  mb2_proto.cpp
arch/x86_64/kernel/int/: interrupt.asm  interrupt.cpp
arch/x86_64/kernel/memory-manager/: bootstrap-buddy.cpp  buddy.cpp  buddy_heap.cpp  greenleafy.cpp  virtual_memory.cpp
arch/x86_64/kernel/memory-manager/buddy/: bootstrap-buddy.cpp  buddy.cpp  buddy_heap.cpp
arch/x86_64/kernel/memory-manager/primary/: primary_phys.cpp
arch/x86_64/kernel/memory-manager/secondary/buddy/: buddy.cpp  buddy_heap.cpp
arch/x86_64/kernel/memory-manager/secondary/slob/: slob.cpp
arch/x86_64/kernel/memory-manager/slob/: slob.cpp
arch/x86_64/kernel/memory-manager/virtual/: virtual.cpp
arch/x86_64/kernel/pmp/: mp.cpp
arch/x86_64/kernel/scheduler/: spinlock.cpp
arch/x86_64/kernel/trace/: strace.cpp  symbols.cpp
arch/x86_64/kernel/tty/: boot-tty.cpp  double-buffering.cpp
arch/x86_64/kernel/uspace/: userspace.cpp
arch/x86_64/libk++/: bitmap.cpp  iostream.cpp
booter/: boot.asm  linker.ld
bootloader/: Makefile  linker.ld  test.asm
bootloader/include/: copy_unreal.hpp  drive.hpp  err.hpp  fat32.hpp  handover.hpp  mmap.hpp  paging.hpp  stdarg.hpp  stdio.hpp  string.hpp
bootloader/src/: bmain.cpp  copy_unreal.asm  drive.asm  err.cpp  fat32.cpp  (+6 more)
building/: booter.py  kernel.py
cppstdlib/: algorithm.h
cstdlib/: cstdint.h  cstring.h
firefly/: meson.build  meson.build.orig
firefly/kernel/: kernel.cpp  kernel.cpp.orig  logger.cpp  runtime.cpp  stubs.cpp  utils.cpp
firefly/kernel/boot/: boot_mem.cpp
firefly/kernel/console/: console.cpp  console.cpp.orig  console_BASE_802957.cpp  console_LOCAL_802957.cpp  gterm.c  image.c  stivale2-term.cpp  term.c
firefly/kernel/console/limine-terminal-port/: README.md  gterm.c  term.c  term.h
firefly/kernel/console/limine-terminal-port/cpp/: image.hpp  term.hpp
firefly/kernel/drivers/: ps2.cpp  serial.cpp  vbe.cpp
firefly/kernel/fb/: framebuffer.cpp  stivale2-term.cpp
firefly/kernel/graphics/: framebuffer.cpp
firefly/kernel/init/: init.cpp  init.cpp.orig
firefly/kernel/intel64/: defs.mac  paging.cpp  uspace.asm
firefly/kernel/intel64/acpi/: acpi.cpp
firefly/kernel/intel64/cpu/: cpu.cpp  smp_trampoline.asm  spinup.asm  trampoline.asm
firefly/kernel/intel64/cpu/ap/: ap.cpp
firefly/kernel/intel64/cpu/apic/: apic.cpp  ioapic.cpp  trampoline.asm
firefly/kernel/intel64/gdt/: gdt.asm  gdt.cpp  tss.cpp
firefly/kernel/intel64/hpet/: hpet.cpp
firefly/kernel/intel64/int/: interrupt.asm  interrupt.cpp
firefly/kernel/intel64/pit/: pit.cpp
firefly/kernel/memory-manager/primary/: primary_phys.cpp
firefly/kernel/memory-manager/secondary/: heap.cpp
firefly/kernel/memory-manager/secondary/buddy/: buddy.cpp  buddy_heap.cpp
firefly/kernel/memory-manager/secondary/slab/: slab.cpp
firefly/kernel/memory-manager/virtual/: virtual.cpp
firefly/kernel/scheduler/: process.cpp  scheduler.cpp  spinlock.cpp
firefly/kernel/tasks/: context.cpp  scheduler.cpp
firefly/kernel/timer/: hpet.cpp  timer.cpp
firefly/kernel/trace/: strace.cpp  symbols.cpp
firefly/kernel/trace/sanitizer/: kasan.cpp  kasan_methods.cpp  ubsan.cpp
firefly/kernel/uspace/: userspace.cpp
firefly/libk++/: bitmap.cpp  cstring.cpp  fmt.cpp  memory.cpp  utils.cpp
include/: algorithm.h  array.h  font8x16.h  idt.hpp  initializer_list.h  kernel.hpp  meson.build  multiboot2.hpp  splash.h  type_traits.h  utility.h  utils.hpp
kernel/: Makefile  boot.asm  crti.asm  crtn.asm  crtn.txt  idt.cpp  init.txt  interrupt.asm  kernel.cpp  linker.ld  multiboot_header.asm  utils.cpp
kernel-old/: utils.cpp
linkage/: linker_i386.ld  linker_x86_64.ld
scripts/: geniso.sh  gensym.sh  qemu-bios-int-log.sh  qemu-bios.sh  qemu-bios.sh.orig  qemu-gdb.sh  qemu-log.sh  qemu-uefi.sh  qemu-uefi.sh.orig  symbol_table_x86_64.py
(+205 files in other folders)
